// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-button should render with custom props 1`] = `
<modus-wc-button color="secondary" custom-class="test-class" full-width="true" pressed="true" size="lg" type="submit" variant="outlined">
  <!---->
  <button aria-pressed="true" class="modus-wc-btn modus-wc-btn-block modus-wc-btn-lg modus-wc-btn-outline modus-wc-btn-secondary test-class" tabindex="0" type="submit">
    <span class="modus-wc-btn-content">
      Test
    </span>
  </button>
</modus-wc-button>
`;

exports[`modus-wc-button should render with default props 1`] = `
<modus-wc-button>
  <!---->
  <button class="modus-wc-btn modus-wc-btn-filled modus-wc-btn-md modus-wc-btn-primary" tabindex="0" type="button">
    <span class="modus-wc-btn-content">
      Test
    </span>
  </button>
</modus-wc-button>
`;

exports[`modus-wc-button should render with disabled attribute 1`] = `
<modus-wc-button disabled="true">
  <!---->
  <button class="modus-wc-btn modus-wc-btn-disabled modus-wc-btn-filled modus-wc-btn-md modus-wc-btn-primary" disabled="" tabindex="-1" type="button">
    <span class="modus-wc-btn-content">
      Test
    </span>
  </button>
</modus-wc-button>
`;
